src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Booking</fullName>
        <description>Booking Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pitched</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <inlineHelpText>Displays the related Account&apos;s Billing City</inlineHelpText>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <inlineHelpText>Displays the related Account&apos;s Billing Country</inlineHelpText>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <description>Shipping Country of the linked Account to this Opportunity</description>
        <formula>Account.ShippingCountry</formula>
        <inlineHelpText>Shipping Country of the linked Account to this Opportunity</inlineHelpText>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <inlineHelpText>Displays the related Account&apos;s Billing Street Address</inlineHelpText>
        <label>Account Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Expiration_Date__c</fullName>
        <formula>(TEXT(TODAY()+28) &amp; &quot;T&quot; &amp; TEXT(TIMEVALUE(NOW()+0.04167)) &amp; &quot;Z&quot;)</formula>
        <label>Booking Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Form_Reminder__c</fullName>
        <formula>(TEXT(TODAY()+14) &amp; &quot;T&quot; &amp; TEXT(TIMEVALUE(NOW()+0.04167)) &amp; &quot;Z&quot;)</formula>
        <label>Booking Form Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Legacy_Import_Number__c</fullName>
        <description>Unique ID used for import purposes for any updates needed</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID used for import purposes for any updates needed</inlineHelpText>
        <label>CC Legacy Import Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Legacy_Owner__c</fullName>
        <inlineHelpText>Legacy Sales Owner of CC Sales History record.</inlineHelpText>
        <label>CC Legacy Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Name__c</fullName>
        <label>CC Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Profile_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization Profile ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Person ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Organization_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Person Organization ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Profile_First_Name__c</fullName>
        <label>CC Person Profile First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Profile_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Person Profile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Profile_Last_Name__c</fullName>
        <label>CC Person Profile Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Proof_Status_ID__c</fullName>
        <label>CC Proof Status ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Publication ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_Name__c</fullName>
        <label>CC Publication Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_User_Name_Sales__c</fullName>
        <description>CC User Name associated with this Opportunity</description>
        <inlineHelpText>CC User Name associated with this Opportunity</inlineHelpText>
        <label>CC User Name Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Formula_Test__c</fullName>
        <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370&amp;&quot;&amp;Id=&quot;&amp;Id&amp;&quot;&amp;QueryId=[BookingFormQuery]0A5E0000056gf9&amp;TemplateID=a0I5E000002kuQvUAI&amp;LRTF=1&amp;DefaultPDF=1&amp;AC0=1&amp;AC1=Follow+up+&quot;&amp;Name&amp;&quot;&amp;AC3=3&amp;LiveEditVisible=0&amp;LiveEditEnable=0&amp;csvisible=1&amp;CSRecipient1=&quot;&amp;Signer__c&amp;&quot;&amp;CSEmailSubject=Chambers+&quot;&amp;Publication_RE__c&amp;&quot;+Booking+Form+for+signature&amp;csEmailMessage=Hello &quot;&amp;Signer__r.FirstName&amp;&quot;, in reference to our conversation a short while ago, please find attached the booking form as detailed. You can you now confirm your inclusion by clicking the Begin Signing button. If you require anything further just let me know and I look forward to hearing back from you.&amp;csExpiration=&quot;&amp;Book_Expiration_Date__c&amp;&quot;&amp;csExpirationReminder=&quot;&amp;Booking_Form_Reminder__c</formula>
        <label>Conga Formula Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EligibleProducts_RE__c</fullName>
        <label>Eligible Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <label>Entry Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_ID__c</fullName>
        <description>Historical ID for Sales History loading from CC</description>
        <externalId>true</externalId>
        <inlineHelpText>Historical ID for Sales History loading from CC</inlineHelpText>
        <label>Historical_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Firm_Profile__c</fullName>
        <formula>CONTAINS(EligibleProducts_RE__c, &apos;Firm Profiles&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Firm Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Individual_Profile__c</fullName>
        <formula>CONTAINS(EligibleProducts_RE__c, &apos;Individual Profiles&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Individual Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Automated_Date__c</fullName>
        <label>Last Automated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_Name__c</fullName>
        <label>Legacy Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_of_Submissions__c</fullName>
        <label># of Submissions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Products_RE__c</fullName>
        <description>Count of Related Products on this Opportunity</description>
        <inlineHelpText>Count of Related Products on this Opportunity</inlineHelpText>
        <label>Number of Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_Status__c</fullName>
        <label>Proof Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Publication</description>
        <label>Publication</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Publication__c.ActiveF_RE__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>User must select an Active Publication.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <formula>Publication_RE__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ranked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signer_Email__c</fullName>
        <formula>Signer__r.Email</formula>
        <inlineHelpText>Email of the Signer related to this Opportunity</inlineHelpText>
        <label>Signer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_Title__c</fullName>
        <formula>Signer__r.Title</formula>
        <inlineHelpText>Title of the Signer related to this Opportunity</inlineHelpText>
        <label>Signer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities as Signer</relationshipLabel>
        <relationshipName>Opportunities_as_Signer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signer_text__c</fullName>
        <description>Displays the First and Last name of the Signer lookup value for Validation Rule Purporses</description>
        <formula>Signer__r.FirstName &amp;&quot; &quot;&amp;  Signer__r.LastName</formula>
        <label>Signer (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <description>Sets today&apos;s date for Booking form field.</description>
        <formula>TODAY ()</formula>
        <inlineHelpText>Sets today&apos;s date for Booking form field.</inlineHelpText>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Publication_RE__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Signer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>bfeko</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Asia_2020_Opportunities</fullName>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Signer__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Publication_RE__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Publication_RE__c</field>
            <operation>equals</operation>
            <value>Asia-Pacific 2020</value>
        </filters>
        <label>Asia 2020 Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Canada_2020_Opportunities</fullName>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Signer__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Publication_RE__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Publication_RE__c</field>
            <operation>equals</operation>
            <value>Chambers Canada 2020</value>
        </filters>
        <label>Canada 2020 Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Org_Profile_History_w_Account_Links</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Profile_Type__c</columns>
        <columns>Signer__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Location__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profile_Type__c</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Org Profile History w/Account Links</label>
    </listViews>
    <listViews>
        <fullName>Person_Profile_History</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Profile_Type__c</columns>
        <columns>Signer__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Publication_RE__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profile_Type__c</field>
            <operation>equals</operation>
            <value>Person</value>
        </filters>
        <filters>
            <field>Signer__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Person Profile History w/Person Links</label>
    </listViews>
    <listViews>
        <fullName>UK_Bar_2020_Opportunities</fullName>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Signer__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Publication_RE__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>UK Bar</value>
        </filters>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <label>UK Bar 2020 Opportunities</label>
    </listViews>
    <listViews>
        <fullName>UK_Guide_2020_Opportunities</fullName>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Signer__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Publication_RE__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>UK Guide</value>
        </filters>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <label>UK Guide 2020 Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Closed_Won</fullName>
        <active>true</active>
        <businessProcess>Booking</businessProcess>
        <description>Closed Won Record Type</description>
        <label>Closed Won</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <businessProcess>Booking</businessProcess>
        <description>New Record Type - Without Booking form Button</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Pitched</fullName>
        <active>true</active>
        <businessProcess>Booking</businessProcess>
        <description>Open and Pitched Stages Record Type</description>
        <label>Open-Pitched</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Address_to_Open_Stage</fullName>
        <active>true</active>
        <description>Opportunity must have related Account&apos;s Address complete before the Stage can be moved from Qualified to Open</description>
        <errorConditionFormula>AND( BLANKVALUE( Account_Street__c, &apos;XXX&apos; ) = &apos;XXX&apos;,
BLANKVALUE( Account_City__c, &apos;XXX&apos; ) = &apos;XXX&apos;,
BLANKVALUE( Account_Country__c, &apos;XXX&apos; ) = &apos;XXX&apos;,
NOT (ISPICKVAL (StageName, &quot;Qualified&quot;)  ))</errorConditionFormula>
        <errorMessage>Related Account Address fields must be complete before the Stage can be updated from Eligible to Open.  Address fields can be edited directly on the Related Account Tab on this Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_can_edit_Closed_Opptys</fullName>
        <active>true</active>
        <description>Once an Oppty is set to Closed, only admin can edit the record.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
IsClosed  = TRUE
)</errorConditionFormula>
        <errorMessage>Only a System Administrator can edit Closed Opportunity records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_needs_Closed_Lost_Reason</fullName>
        <active>true</active>
        <description>This validation rule enforces the need for a Closed Lost Reason to be specified to save an opportunity with a status of Closed Lost</description>
        <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
        <errorDisplayField>Loss_Reason__c</errorDisplayField>
        <errorMessage>Please pick a reason for why the opportunity was lost in the Loss Reason field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Products_to_Open_Stage</fullName>
        <active>false</active>
        <description>Opportunity must have related Products before the Stage can be moved from Eligible to Open</description>
        <errorConditionFormula>AND(Number_of_Products_RE__c &lt; 1, NOT (ISPICKVAL( StageName , &quot;Qualified&quot;)))</errorConditionFormula>
        <errorMessage>Product Line Items must be added to the Opportunity before the Stage can be updated from Eligible to Open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Signer_and_Signer_Email_to_Open_Stage</fullName>
        <active>false</active>
        <description>Opportunity must have related Signer and Signer must have an email address complete before the Stage can be moved from Qualified to Open</description>
        <errorConditionFormula>AND( OR(ISBLANK(  Signer__r.LastName ),
ISBLANK(  Signer__r.Email )),
NOT (ISPICKVAL( StageName , &quot;Qualified&quot;)))</errorConditionFormula>
        <errorMessage>Related Signer and Signer Emails fields must be complete before the Stage can be updated from Qualified to Open.  Signer email field can be edited by clicking on the Signer&apos;s name link and editing that contact record.</errorMessage>
    </validationRules>
</CustomObject>